--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,8 +18,10 @@ add_executable(${APP_TARGET})
 target_sources(${APP_TARGET}
     PRIVATE
         main.cpp
+        Driver_CO2.cpp
 )
 
+target_include_directories(${APP_TARGET} PRIVATE .)
 target_link_libraries(${APP_TARGET}
     PRIVATE
         mbed-os
